--- a/main.css
+++ b/main.css
@@ -10,6 +10,10 @@ body {
   font-weight: bold;
   font-size: 17px;
 }
+a {
+  text-decoration: none;
+  color: #000;
+}
 output {
   display: none;
 }
