--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 /*
   ALL TLOP CSS STYLING CREDIT TO CHRIS CHAMBERS
   http://codepen.io/cchambers/pen/mVvbPq
+  GITHUB CORNER CREDIT TO TIM HOLMAN
 */
 
 body {
@@ -80,3 +81,5 @@ ul {
   left: 362px;
   top: 356px;
 }
+
+.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}
